--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/sections"
+        android:id="@+id/sectionFragment"
         android:title="@string/sections"
         android:icon="@drawable/section" />
     <item
-        android:id="@+id/content"
+        android:id="@+id/newsFragment"
         android:title="@string/news"
         android:icon="@drawable/news" />
     <item
-        android:id="@+id/favorite"
+        android:id="@+id/favoriteFragment"
         android:title="@string/favorite"
         android:icon="@drawable/favorite" />
 </menu>
