--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="background_blue">#343c60</color>
+    <color name="dark_blue">#0c1a32</color>
+    <color name="text_unchecked_color">#B7BBC1</color>
+    <color name="text_checked_color">#FFFFFFFF</color>
+    <color name="gray">#5E646E</color>
+    <color name="dark_gold">#926F34</color>
+    <color name="gold">#D2AC47</color>
 </resources>
