--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,8 +17,18 @@
     <style name="WelcomeButtonStyle">
         <item name="android:background">@drawable/round_shape</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginTop">@dimen/_10dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginHorizontal">@dimen/_10dp</item>
+    </style>
+    <style name="EditTextThemeOverlay" parent="ThemeOverlay.AppCompat">
+        <item name="colorPrimary">@color/dark_gold</item>
+        <item name="colorPrimaryVariant">@color/gold</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="colorOnSecondary">#573103</item>
+        <item name="boxStrokeColor">@color/gold</item>
+        <item name="placeholderTextColor">@color/gold</item>
     </style>
 
     <style name="LoginRegEditTextStyle" parent="android:Widget.EditText">
@@ -26,5 +36,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginHorizontal">@dimen/_10dp</item>
         <item name="android:layout_margin">@dimen/_10dp</item>
+    </style>
+    <style name="RegisterEditTextStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="hintTextColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
