--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -21,4 +21,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/signOutBtn"
+        style="@style/WelcomeButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/signout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/_10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
